# NetworkLookup

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
DB/: Schema.sql
Database/: Data.sql  Schema.sql
src/: network_lookup.rs
src/db_tables/: device.rs  group.rs  mod.rs  network.rs  service.rs
src/lookup_error/: mod.rs
src/network/: asus.rs  device.rs  mod.rs
src/network/asus/: mod.rs  types.rs
src/network/asus/allowed_devices/: mod.rs
src/network/asus/band/: mod.rs  types.rs
src/network/asus/connected_devices/: band.rs  mod.rs
src/network/asus/connected_devices/types/: band.rs  device.rs
src/network/asus/devices/: band.rs  mod.rs
src/network/asus/devices/types/: band.rs  device.rs  mod.rs
src/network/asus/static_devices/: mod.rs
src/query/: device.rs  devices.rs  group.rs  groups.rs  mod.rs  network.rs  networks.rs  service.rs  services.rs
src/response/: mod.rs  response_error.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/groups/: mod.rs
src/routes/api/networks/: devices.rs  mod.rs
src/routes/api/services/: mod.rs
src/routes/api/v1_0/: mod.rs
src/routes/api/v1_0/group/: mod.rs
src/routes/api/v1_0/group/id/: mod.rs
src/routes/api/v1_0/group/label/: mod.rs
src/routes/api/v1_0/network/: mod.rs
src/routes/api/v1_0/network/id/: mod.rs
src/routes/api/v1_0/network/id/device/: mod.rs
src/routes/api/v1_0/network/label/: mod.rs
src/search_type/: mod.rs
src/unknown_lookup/: mod.rs
src/unknown_lookup/networks/: mod.rs
src/unknown_lookup/networks/netgear/: mod.rs
tests/: EndpointTest.py
(+19 files in other folders)
