[package]
name = "network_lookup"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"

regex = "1.5.5"

reqwest = "0.11.10"

# FROM: https://serde.rs/derive.html thanks to https://github.com/serde-rs/serde/issues/1586
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

sqlx = {version = "0.5.13", features = ["runtime-actix-rustls", "postgres"]}

[[bin]]
name = "network_lookup"
path = "src/network_lookup.rs"
