[package]
name = "network_lookup"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.12.1"
reqwest = {version="0.13.1", features = ["form"]}
# FROM: https://serde.rs/derive.html thanks to https://github.com/serde-rs/serde/issues/1586
serde = {version = "1.0.128", features = ["derive"]}
serde_json = "1.0.149"
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres"]}

[[bin]]
name = "network_lookup"
path = "src/network_lookup.rs"
